--- a/preview/index.html
+++ b/preview/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Title</title>
-	<script type="module" src="preview.js"></script>
+	<script type="module" src="dev.js"></script>
 	<style>
 		body {
 			background-color: black;
