--- a/preview/file/index.html
+++ b/preview/file/index.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Title</title>
-	<script type="module" src="dev.js"></script>
+	<script src="../../src/ogc.js"></script>
+	<script src="dev.js"></script>
 	<style>
 		body {
 			background-color: black;
