--- a/preview/index.html
+++ b/preview/index.html
@@ -3,8 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Title</title>
-	<script src="../../src/ogc.js"></script>
-	<script src="dev.js"></script>
+	<script src="../src/ogc.js"></script>
 	<style>
 		body {
 			background-color: black;
@@ -12,6 +11,6 @@
 	</style>
 </head>
 <body>
-
+	<script src="dev.js"></script>
 </body>
 </html>
